# challenge-guestready

./: .env  .envrc  .gitignore  .pre-commit-config.yaml  CHALLENGE.md  Makefile  README.md  dev_requirements.txt  docker-compose.yml  pytest.ini  tox.ini
.postman/: guestready_challenge.postman_collection.json
services/django/: Dockerfile  pyproject.toml  requirements.txt
services/django/django_project/: django.env  manage.py
services/django/django_project/django_project/: logger.py  settings.py  urls.py
services/django/django_project/game/: admin.py  models.py  tests.py  urls.py  views.py
services/django/django_project/game/migrations/: 0001_initial.py
services/django/django_project/game/templates/game/: base.html  error.html  front_page.html  index.html  post.html  success.html
services/restapi/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  restapi.env
services/restapi/api/: __main__.py  logger.py  settings.py
services/restapi/api/app/: __init__.py  app.py  config.py  models.py  responses.py  schemas.py  verification.py
services/restapi/api/app/routers/: game.py
services/restapi/api/database/: config.py  db.py
services/restapi/migrations/: env.py
services/restapi/migrations/versions/: 16024ea933fc_setup_of_base_tables_game_developer_.py  50bb26d08e71_added_missing_column_description_to_game.py  797ba22f6102_removed_unused_index_limited_text_size.py  cbd9c9bba163_added_column_index_for_faster_queries_.py
services/restapi/tests/: test_api.py  test_api_default.py  test_api_game.py  test_logger.py  test_settings.py
(+3 files in other folders)
